<resources>
    <string name="preference_file_key" translatable="false">sharedPrefDidaktikapp</string>
    <string name="servidor" >Servidor</string>
    <string name="ipCorrecta" >IP Cambiada</string>
    <string name="ipIncorrecta" >IP Incorrecta</string>
    <string name="TituloServidor" >Servidor</string>
    <string name="SubituloServidor" >Introduce la IP</string>
    <string name="HintServidor">IP del servidor</string>
    <string name="cambiar">Cambiar</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGlkYWt0aWt1cHYiLCJhIjoiY2szNzhiNmt6MDNlbTNjbm8yMDNmeTZyNiJ9.10ubJTPv5AC6X6tDYZRhNw</string>
    <string name="adminOn">Administrador activado</string>
    <string name="app_name" translatable="false">Didaktikapp</string>
    <string name="html_app_name" translatable="false">
            <![CDATA[ <b><font color=#222020><u>Didaktik</u></b><b><font color=#2B82C5><u>app</u> </b>
            ]]>
        </string>
    <string name="nombreLugar1" translatable="false">Zumeltzegi dorrea</string>
    <string name="nombreLugar2" translatable="false">Sancti Spiritus unibertsitatea</string>
    <string name="nombreLugar3" translatable="false">San Miguel Parrokia</string>
    <string name="nombreLugar4" translatable="false">Trena</string>
    <string name="nombreLugar5" translatable="false">Errota (turismo bulegoa)</string>
    <string name="nombreLugar6" translatable="false">Arantzazuko Santutegia</string>
    <string name="nombreLugar7" translatable="false">Araotz auzoa</string>
    <string name="nombreLugar8" translatable="false">Arrikrutzeko kobak</string>
    <string name="nombreLugar9">Ikastetxea</string>
    <string name="nombreLugar10" translatable="false">Gernika</string>
    <string name="new_location">Lokalizazio Berria</string>
    <string name="user_location_permission_explanation">Lokalizaziorako baimenak</string>
    <string name="user_location_permission_not_granted">Ez duzu lokalizaziorako baimenik</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ZumeltzegiSopaZumeltzegi" translatable="false">Zumeltzegi</string>
    <string name="ZumeltzegiSopaDefentsa">Defentsa</string>
    <string name="ZumeltzegiSopaKondea">Kondea</string>
    <string name="ZumeltzegiSopaHotela">Hotelak</string>
    <string name="ZumeltzegiSopaSiguiente">Hurrengoa</string>
        <string name="ZumeltzegiSopaMain_menu">Menu nagusia</string>
    <string name="ZumeltzegiSopaCongratulations">Zorionak!!!</string>
    <string name="ZumeltzegiSopaSettings">Ezarpenak</string>
    <string name="ZumeltzegiSopaFinished">Amaituta</string>
    <string name="ZumeltzegiSopaNew_game">Jolas berria</string>
    <string name="ZumeltzegiTitulo"><![CDATA[Zumeltzegi ]]></string>
    <string name="ZumeltzegiPregunta1Titulo">1.Zertarako eraiki zen dorretxea?</string>
    <string name="ZumeltzegiPregunta2Titulo">2. Zein familia bizi izan zen dorretxean XV. Mendetik aurrera?</string>
    <string name="ToastImagenes">Gordetako argazkiak</string>
    <string name="AyudaZumTituloPregunta">Pregunta</string>
    <string name="AyudaZumDetallePregunta">Lee la pregunta</string>
    <string name="AyudaZumTituloRespuesta">Respuesta</string>
    <string name="AyudaZumDetalleRespuesta">Escribe la respuesta</string>
    <string name="AyudaZumTituloContinuar">Continúa</string>
    <string name="AyudaZumDetalleContinuar">Pulsa para terminar</string>
    <string name="SanMiguelTitulo" translatable="false">San Miguel</string>
    <string name="SanMiguelPregunta1Titulo">1. Zein mendetan eraiki zen?</string>
    <string name="SanMiguelPregunta1OpcionA" translatable="false">XVI</string>
    <string name="SanMiguelPregunta1OpcionB" translatable="false">XII</string>
    <string name="SanMiguelPregunta1OpcionC" translatable="false">XV</string>
    <string name="SanMiguelPregunta2Titulo">2. Noiz egiten dute dantza bertan?</string>
    <string name="SanMiguelPregunta2OpcionA">Herriko Jaietan</string>
    <string name="SanMiguelPregunta2OpcionB">Korpusetan</string>
    <string name="SanMiguelPregunta2OpcionC">Gabonetan</string>
    <string name="SanMiguelPregunta3Titulo">3. Zenbat nabe ditu?</string>
    <string name="SanMiguelPregunta3OpcionA" translatable="false">2</string>
    <string name="SanMiguelPregunta3OpcionB" translatable="false">5</string>
    <string name="SanMiguelPregunta3OpcionC" translatable="false">4</string>
    <string name="SanMiguelPregunta4Titulo">4. Non egiten dute dantza?</string>
    <string name="SanMiguelPregunta4OpcionA">Aldare azpitik</string>
    <string name="SanMiguelPregunta4OpcionB">Klaustro azpitik</string>
    <string name="SanMiguelPregunta4OpcionC">Eliza ondotik</string>
    <string name="Continuar">Jarraitu</string>
    <string name="Correcta">Zuzena</string>
    <string name="Incorrecta">Okerra</string>
    <string name="AyudaSanMiguelTituloPregunta">Responde a la pregunta</string>
    <string name="AyudaSanMiguelDetallePregunta">Elige la opción correcta</string>
    <string name="AyudaSanMiguelTituloRespuesta">Corrige</string>
    <string name="AyudaSanMiguelDetalleRespuesta">Sabrás si has acertado</string>
    <string name="AyudaSanMiguelTinderTituloCorrecta">Correcta</string>
    <string name="AyudaSanMiguelTinderDetalleCorrecta">Desliza a la derecha o pincha si coinciden la imagen y el nombre</string>
    <string name="AyudaSanMiguelTinderTituloIncorrecta">Incorrecta</string>
    <string name="AyudaSanMiguelTinderDetalleIncorrecta">Desliza a la izquierda o pincha si no coinciden la imagen y el nombre</string>
    <string name="AyudaSanMiguelTinderTituloRetroceder">Retrocede</string>
    <string name="AyudaSanMiguelTinderDetalleRetroceder">Vuelve a la imagen anterior</string>
    <string name="TrenTextoTitulo" translatable="false">Trena</string>
    <string-array name="TrenTextoCambiar">
        <item>Gasteizetik</item>
        <item>Postetxea</item>
        <item>Vasco-Navarro</item>
    </string-array>
    <string name="TrenTextoError">Ez da </string>
    <string name="AyudaTrenTitulo">Elige la palabra</string>
    <string name="AyudaTrenDetalle">Introduce cada palabra en su hueco</string>
        <string name="TrenPuzleTerminado">AMAITU</string>
    <string name="ErrotaTitulo" translatable="false">San Miguel Errota</string>
    <string name="ErrotaPregunta1">Atera argazki bat tobera edo kaxari!</string>
    <string name="ErrotaPregunta2">Zein urtetan erosi zuten Santa Ana Komentuko mojek errota?</string>
    <string name="Terminar">Amaitu</string>
    <string name="AyudaErrotaTituloPregunta">Responde</string>
    <string name="AyudaErrotaDetallePregunta">Saca una foto para responder a la pregunta</string>
    <string name="AyudaErrotaTituloTextos">Arrastra</string>
    <string name="AyudaErrotaDetalleTextos">Arrastra las palabras a su hueco</string>
    <string name="new_game_loading_text" translatable="false">Generating game data…</string>
    <string name="summary_about">Word search game letra zopa bat da. Bertan, bertikalki, horizontalki zein diagonalki kokatzen diren hitzak aurkitu behar ditu jokalariak.</string>
        <string name="UniversidadTest2">2. Oñatiko unibertsitatea XV mendean eraiki zen.</string>
    <string name="UniversidadFotos">Egin itzazu unibertsitatearen 3 argazki ikuspegi desberdinetatik.</string>
    <string name="Universidad">Unibertsitatea</string>
    <string name="UniversidadTest1">1. Oñatiko unibertsitatea Euskal Herriko bigarren unibertsitatea izan zen.</string>
    <string name="AyudaUniversidadTituloPregunta">Responde a la preguntas</string>
    <string name="AyudaUniversidadDetallePregunta">Elige la opciónes correctas</string>
    <string name="AyudaUniversidadTituloRespuesta">Corrige</string>
    <string name="AyudaUniversidadDetalleRespuesta">Sabrás si has acertado</string>
    <string name="AyudaUniversidadTituloFotos">Fotografía</string>
    <string name="AyudaUniversidadDetalleFotos">Haz tres fotos a la universidad</string>
    <string name="Gernika" translatable="false">Gernika</string>
    <string name="GernikaPoemaFrase1" translatable="false">Gernikako arbola</string>
    <string name="GernikaPoemaFrase2" translatable="false">da bedeinkatua</string>
    <string name="GernikaPoemaFrase3" translatable="false">Euskaldunen artean</string>
    <string name="GernikaPoemaFrase4" translatable="false">guztiz maitatua.</string>
    <string name="GernikaPoemaFrase5" translatable="false">Eman ta zabal zazu munduan frutua</string>
    <string name="GernikaPoemaFrase6" translatable="false">adoratzen zaitugu arbola santua. </string>
    <string name="GernikaPregunta1Titulo">1. Zein motatako arbola da?</string>
    <string name="GernikaPregunta1OpcionA">Haritza</string>
    <string name="GernikaPregunta1OpcionB">Izeia </string>
    <string name="GernikaPregunta1OpcionC">Gorostia</string>
    <string name="GernikaPregunta2Titulo">2. Zenbat urte ditu?</string>
    <string name="GernikaPregunta2OpcionA" translatable="false">106</string>
    <string name="GernikaPregunta2OpcionB" translatable="false">104</string>
    <string name="GernikaPregunta2OpcionC" translatable="false">102</string>
    <string name="GernikaPregunta3Titulo">3. Nork idatzi zion kantu bat?</string>
    <string name="GernikaPregunta3OpcionA" translatable="false">Etxebarria</string>
    <string name="GernikaPregunta3OpcionB" translatable="false">Iparragirre</string>
    <string name="GernikaPregunta3OpcionC" translatable="false">Neruda</string>
    <string name="AyudaGernikaTituloPregunta">Responde a la pregunta</string>
    <string name="AyudaGernikaDetallePregunta">Elige la respuesta correcta</string>
    <string name="AyudaGernikaTituloRespuesta">Corrige</string>
    <string name="AyudaGernikaDetalleRespuesta">Sabrás cuantas has acertado</string>
    <string name="AyudaErrepasoTituloPregunta">Elige</string>
    <string name="AyudaErrepasoDetallePregunta">¿Coinciden imagen y título?</string>
    <string name="AyudaErrepasoTituloCorrecta">Correcta</string>
    <string name="AyudaErrepasoDetalleCorrecta">Desliza a la derecha o pincha aqui si es correcta</string>
    <string name="AyudaErrepasoTituloIncorrecta">Incorrecta</string>
    <string name="AyudaErrepasoDetalleIncorrecta">Desliza a la izquierda o pincha aqui si es incorrecta</string>
    <string name="AyudaErrepasoTituloVolver">Volver</string>
    <string name="AyudaErrepasoDetalleVolver">Vuelve a la imagen anterior</string>
    <string name="pref_showGridLine" translatable="false">showGridLine</string>
    <string name="pref_snapToGrid" translatable="false">snapToGrid</string>
    <string name="pref_enableSound" translatable="false">enableSound</string>
    <string name="pref_deleteAfterFinish" translatable="false">deleteAfterFinish</string>
    <string name="pref_enableFullscreen" translatable="false">enableFullscreen</string>
    <string name="pref_autoScaleGrid" translatable="false">autoScaleGrid</string>
    <string name="snap_to_grid_def_val" translatable="false">ALWAYS_SNAP</string>
    <string name="show_grid_line" translatable="false">Show Grid Line</string>
    <string name="snap_to_grid" translatable="false">Snap To Grid</string>
    <string name="saved_game">Datuak gorde dira</string>
    <string name="enable_sound">Soinua gaitu</string>
    <string name="about_credit" translatable="false">Developer: Abdul Aris R.</string>
    <string name="delete_finish">Ezabatu eta amaitu</string>
    <string name="enable_fullscreen">Pantaila osoa</string>
    <string name="auto_scale_grid" translatable="false">Auto Scale Grid</string>
    <string name="finish_text">Letra zopa osatu duzu!</string>
    <string name="version" translatable="false">Version</string>
    <string name="version_num" translatable="false">1.0</string>
    <string name="settings">Ezarpenak</string>
    <string name="congratulations"><![CDATA[Zorionak! ]]></string>
    <string name="main_menu">Mapara itzuli</string>
    <string name="corregir">Zuzendu</string>
</resources>