<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negroFondo"
    android:orientation="vertical"
    tools:context=".Fragments.FragmentSanMiguel">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SanMiguelTitulo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPregunta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SanMiguelPregunta1Titulo" />

        <RadioGroup
            android:id="@+id/rgroupPregunta1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rbtnPregunta1.A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SanMiguelPregunta1OpcionA" />

            <RadioButton
                android:id="@+id/rbtnPregunta1.B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SanMiguelPregunta1OpcionB" />

            <RadioButton
                android:id="@+id/rbtnPregunta1.C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SanMiguelPregunta1OpcionC" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>