<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundTransparente"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".Fragments.FragmentSanMiguel">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:background="@color/gray"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/youthtouch"
            android:gravity="center"
            android:text="@string/SanMiguelTitulo"
            android:textSize="80sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/layoutPregunta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/tvPregunta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SanMiguelPregunta1Titulo"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/rgroupPregunta1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbtnPregunta1.A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta1OpcionA"
                    android:textSize="30sp"
                    android:textColor="@color/negroFondo"/>

                <RadioButton
                    android:id="@+id/rbtnPregunta1.B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta1OpcionB"
                    android:textSize="30sp"
                    android:textColor="@color/negroFondo"/>

                <RadioButton
                    android:id="@+id/rbtnPregunta1.C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta1OpcionC"
                    android:textSize="30sp"
                    android:textColor="@color/negroFondo"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPregunta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo">

            <TextView
                android:id="@+id/tvPregunta2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SanMiguelPregunta2Titulo"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/rgroupPregunta2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbtnPregunta2.A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta2OpcionA"
                    android:textSize="30sp"
                    android:textColor="@color/negroFondo"/>

                <RadioButton
                    android:id="@+id/rbtnPregunta2.B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta2OpcionB"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/rbtnPregunta2.C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta2OpcionC"
                    android:textSize="30sp"
                    android:textColor="@color/negroFondo"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPregunta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo">

            <TextView
                android:id="@+id/tvPregunta3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SanMiguelPregunta3Titulo"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/rgroupPregunta3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbtnPregunta3.A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta3OpcionA"
                    android:textSize="30sp"
                    android:textColor="@color/negroFondo"/>

                <RadioButton
                    android:id="@+id/rbtnPregunta3.B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta3OpcionB"
                    android:textSize="30sp"
                    android:textColor="@color/negroFondo"/>

                <RadioButton
                    android:id="@+id/rbtnPregunta3.C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta3OpcionC"
                    android:textSize="30sp"
                    android:textColor="@color/negroFondo"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPregunta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo">

            <TextView
                android:id="@+id/tvPregunta4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SanMiguelPregunta4Titulo"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/rgroupPregunta4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbtnPregunta4.A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta4OpcionA"
                    android:textSize="30sp"
                    android:textColor="@color/negroFondo"/>

                <RadioButton
                    android:id="@+id/rbtnPregunta4.B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta4OpcionB"
                    android:textSize="30sp"
                    android:textColor="@color/negroFondo"/>

                <RadioButton
                    android:id="@+id/rbtnPregunta4.C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SanMiguelPregunta4OpcionC"
                    android:textSize="30sp"
                    android:textColor="@color/negroFondo"/>
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="307dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ripple_boton_bg"
            android:clickable="true"
            android:enabled="false"
            android:text="@string/Continuar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>